fixed modal long text alignment

--- a/css/style.css
+++ b/css/style.css
@@ -141,3 +141,8 @@ li {
 .publist {
     color: white;
 }
+/* modals */
+
+.list-group-item {
+    text-align: left;
+}
